syntax = "proto3";

package metadata;

import "google/protobuf/timestamp.proto";

message Content{
  uint32 id = 1;
  string name = 2;
  string description = 3;
  repeated Publisher publishers = 4;
  string url = 5;
  string image = 6;
  ContentType type = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  uint32 views = 10;
  uint32 likes = 11;
  uint32 dislikes = 12;
}

enum ContentType {
  CONTENT_TYPE_UNSPECIFIED = 0;
  CONTENT_TYPE_SRHOT = 1;
  CONTENT_TYPE_MOIVE = 2;
  CONTENT_TYPE_VLOG = 3;
  CONTENT_TYPE_AI_GENERATED = 4;
}

message Publisher {
  uint32 id = 1;
  string name = 2;
  string avatar = 3;
}

message MaterializeRequest {
  uint32 id = 1;
}
